more removal of trifecta

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <!-- title description start -->
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <p>
-                            <span class="lead"><strong>Papa Shiba, is the father of the originating Baby Shiba. With the announcement of $PHIBA, the developers of both tokens are planning to create a trifecta of ShIbas, with these tokens being developed into a fully DEFI decentralised protocol and swap. With plans of listing on major exchanges and major promotional websites.</strong></span><br><br>
+                            <span class="lead"><strong>Papa Shiba, is the father of the originating Baby Shiba. With the announcement of $PHIBA there are plans of listing on major exchanges and major promotional websites.</strong></span><br><br>
                         </p>
                     </div>
         <div id="team" class="pt75">
