--- a/index.html
+++ b/index.html
@@ -355,9 +355,7 @@
                             </div>
                             <div class="price-body">
                                 <ul>
-                                    <li>Completion of the</li>
-                                    <li>Trifecta of the shibas!</li>
-                                    <li>Hire professional marketing firm</li>										
+                                    <li>to be announced!</li>									
                                 </ul>
                             </div>
                         </div>
@@ -373,8 +371,7 @@
                             </div>
                             <div class="price-body">
                                 <ul>
-                                    <li>Combination of Shiba Trifecta</li>
-                                    <li>into a DEFI swap &amp; exchange</li> 
+                                    <li>to be announced!</li>
                             </ul></div>
                         </div>
                     </div>
