--- a/index.html
+++ b/index.html
@@ -140,19 +140,16 @@
             <div class="intro-body">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-12">
-                            <h1 class="brand-heading text-capitalize color-light pt10 pb10">
-                                 <div class="brand-heading-typed-container">
-                                    <div id="typed-strings" style="display: none;">
-                                        <p>Papa Shiba now <span class="color-pasific">Live</span></p>
-                                        <p>The father of all shibas</p>
-                                        <p>From the creators of $BHIBA.^1000</p>
-                                    </div>
-                                    <span id="typed" style="white-space:pre;">Papa Shiba now <span class="color-pasific">Liv</span></span><span class="typed-cursor">|</span>
+                        <div class="col-xl-12">
+                            <div class="video-container">
+                                <video autoplay muted loop>
+                                    <source src="/video/cyber_phiba.mp4" type="video/mp4" />
+                                </video>
+                                <div class="caption">
+                                    <a href="https://t.me/PHIBAcommunity" target"_blank"="" class="button button-pasific button-lg hover-ripple-out animated fadeInUp visible" data-animation="fadeInUp" data-animation-delay="1000">Buy on Uniswap</a>
+                                    <a href="https://t.me/PHIBAcommunity" target"_blank"="" class="button button-pasific button-lg hover-ripple-out animated fadeInUp visible" data-animation="fadeInUp" data-animation-delay="1000">Join us on telegram</a>
                                 </div>
-                            </h1>
-                            <a href="https://t.me/PHIBAcommunity" target"_blank"="" class="button button-pasific button-lg hover-ripple-out animated fadeInUp visible" data-animation="fadeInUp" data-animation-delay="1000">Buy on Uniswap</a>
-							<a href="https://t.me/PHIBAcommunity" target"_blank"="" class="button button-pasific button-lg hover-ripple-out animated fadeInUp visible" data-animation="fadeInUp" data-animation-delay="1000">Join us on telegram</a>
+                            </div>
                         </div>
                     </div>
                 </div>
