update the logo image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Papa Shiba" />
         <meta property="og:description" content="The father of all Shibas" />
-        <meta property="og:image" content="images/Papashiba2.png" />
+        <meta property="og:image" content="images/logo.jpg" />
 
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image" />
@@ -18,7 +18,7 @@
         <meta property="twitter:url" content="https://www.papashiba.org" />
         <meta name="twitter:title" content="Papa Shiba" />
         <meta name="twitter:description" content="The father of all Shibas" />
-        <meta name="twitter:image" content="images/Papashiba2.png" />
+        <meta name="twitter:image" content="images/logo.jpg" />
         
         <meta name="author" content="Harry Boo">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
